@@ -1,3 +1,3 @@
-pyinstaller>=4.1
+pyinstaller>=4.2
 GitPython>= 3.1.11
 pyinstaller-hooks-contrib>=2020.11
