@@ -57,11 +57,6 @@
     "window_queue_remove_btn": "Kaldır",
     "window_queue_totalsize_label": "Toplam Boyut: {0}",
 	
-	"window_hotfix_keyring_info_label": "Keyring ve PyInstaller arasındaki sorunlardan ötürü derlenmiş sürümlerde proxy desteği kapatıldı.\nEğer gerçekten proxy desteğine ihtiyacınız varsa, lütfen bir kaynak sürümü indirin ve onu kullanın.\nBunun için bir çözüm üzerine çalışıyorum.",
-	"window_hotfix_keyring_dont_show_again_label": "Tekrar gösterme",
-	"window_hotfix_keyring_ok_btn": "Tamam",
-	"window_hotfix_keyring_title": "Dikkat! Proxy desteği kapatıldı!",
-
 	"window_keyring_support_info_label": "Geçerli backend keyring'i bulunamadı.\nLütfen, ilgili yükleme rehberi için keyring'in anasayfasını ziyaret edin.\n{0}",
 	"window_keyring_support_dont_show_again_label": "Tekrar gösterme",
 	"window_keyring_support_ok_btn": "Tamam",
