@@ -6,6 +6,7 @@ future release (aka current master branch):
 +  update turkish translation
 +  use UPX for builds to produce smaller binaries and hopefully slightly less antivirus false positives
 -  fix cut off header in build.log
+-  removed hotfix for issues between keyring and PyInstaller
 
 v008:
 !  refactored gui code
